problema de padding resolvido

--- a/exercisios/desafios/desafio-cap16/style/style.css
+++ b/exercisios/desafios/desafio-cap16/style/style.css
@@ -60,6 +60,8 @@ header > p {
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
+    padding-bottom: 30px;
+    padding-top: 20px;
     text-shadow: -2px 3px 3px #39879b73;
 }
 nav {
