--- a/exercisios/desafios/desafio12/style.css
+++ b/exercisios/desafios/desafio12/style.css
@@ -1,8 +1,55 @@
 @charset "UTF-8";
 
-body {
-
+* {
+    margin: 0px;
+    padding: 0px;
 }
-header{
-    
+html, body {
+    min-height: 100vh;
+    background-color: darkgrey;
+}
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+ header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+ }
+ header > p {
+    padding-bottom: 50px;
+ }
+ section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em; 
+    padding-left: 40px;
+ }
+ section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.315);
+    width: 400px;
+ }
+ a {
+    font-weight: bolder;
+    color: white;
+    text-decoration: none;
+ }
+ a:hover {
+    color: rgba(0, 0, 163, 0.76);
+    text-decoration: underline;
+}
+ .normal {
+    background-color: white;
+    color: black;
+ }
+ .imagem {
+    background-color: rgba(15, 9, 37, 0.884);
+    color: white;
+ }
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
