--- a/exercisios/desafios/desafio12/style.css
+++ b/exercisios/desafios/desafio12/style.css
@@ -1,34 +1,62 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+:root {
+   --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+   --fonte3: "Sriracha", cursive;
+   --fonte2: "Passion One", sans-serif
+}
 * {
     margin: 0px;
     padding: 0px;
 }
+.passion-one-regular {
+  font-family: "Passion One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.sriracha-regular {
+  font-family: "Sriracha", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+   
 }
 header {
     background-color: black;
     color: white;
-    text-align: center;
+    text-align: center; 
+    font-size: 3.3vh;
 }
  header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 3.3em;
  }
  header > p {
     padding-bottom: 50px;
+    font-size: 1.3em;
  }
  section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em; 
     padding-left: 40px;
+    font-family: var(--fonte3);
+    font-size: 2.8vh;
  }
  section.imagem > p {
     background-color: rgba(0, 0, 0, 0.315);
-    width: 400px;
+    width: 250px;
+    display: inline-block;
+    padding: 5px;
  }
  a {
     font-weight: bolder;
@@ -52,4 +80,5 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
+    font-size: 1.25em;
 }
